Restructured code a bit (new gui package), updated PDFSearch, index (now building if non existant) and pdfs are now in res folder, gitignor